crates/escalier_parser/src/snapshots/escalier_parser__tests__member_access-5.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"arr[0][1];\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 10,
                    },
                },
                span: 0..10,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 0..9,
                    kind: Member(
                        Member {
                            obj: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                },
                                span: 0..6,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 3,
                                                },
                                            },
                                            span: 0..3,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 3,
                                                        },
                                                    },
                                                    span: 0..3,
                                                    name: "arr",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        prop: Computed(
                                            ComputedPropName {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 4,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                },
                                                span: 4..5,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 4,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                    },
                                                    span: 4..5,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 4,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 5,
                                                                    },
                                                                },
                                                                span: 4..5,
                                                                value: "0",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    },
                                ),
                                inferred_type: None,
                            },
                            prop: Computed(
                                ComputedPropName {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 8,
                                        },
                                    },
                                    span: 7..8,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 7,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 8,
                                            },
                                        },
                                        span: 7..8,
                                        kind: Lit(
                                            Num(
                                                Num {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 7,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                    },
                                                    span: 7..8,
                                                    value: "1",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ),
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
